manifests/deployment.frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: surt
    env: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: surt
      env: frontend
  template:
    metadata:
      labels:
        app: surt
        env: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: frontend
          image: hub.maxtrier.dk/natamo/surt:latest
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: surt
    env: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
